# Diff-Drift

./: .gitattributes  .gitignore  AGENTS.md  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  PRODUCT.md  README.md  SECURITY.md  action.yml  fp-replay.config.example.json  index.html  package-lock.json  package.json  playwright.tauri.config.ts  playwright.visual.config.ts  playwright.web.config.ts  vite.config.ts
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  confusing-output.yml  feature_request.yml  install-problem.yml  noisy-flag.yml  tried-diff-drift.yml
.github/workflows/: action-smoke.yml  ci.yml  release.yml
design_handoff_drift_inspector/: Drift Inspector (Windows 11).html  README.md  app-win.jsx  data.jsx
docs/: engine-v2-scorecard.md
docs/demo/: demo-script.md
docs/feedback/: feedback-triage.md
docs/releases/: v0.3.0-public-feedback.md  v0.3.0-rc.1-public-feedback.md
docs/wiki/: AB-Study-Design.md  Architecture.md  Concepts.md  Development.md  Eval-Methodology.md  FAQ.md  Home.md  NSIS-Dogfood-2026-06-10.md  Privacy-and-Data-Flow.md  Release-and-Platform-Support.md  Rule-Reference.md  Self-Review-2026-06-11.md  Threat-Model.md  Troubleshooting.md  User-Guide.md
eval/: make-packets.mjs  panel.mjs  run-engine.mjs  score-agent.mjs
eval/cases/: benign-eval-in-string.case.mjs  benign-formatting-only.case.mjs  broadened-cors.case.mjs  child-process-execution.case.mjs  constant-falsy-guard-evasion.case.mjs  csharp-broadened-cors.case.mjs  csharp-child-process.case.mjs  csharp-error-handling-removed.case.mjs  csharp-eval-call.case.mjs  csharp-guard-removed.case.mjs  csharp-loose-regex.case.mjs  csharp-removed-if-guard.case.mjs  csharp-removed-sanitize.case.mjs  csharp-structural-drift.case.mjs  csharp-tls-disable.case.mjs  csharp-verify-to-decode.case.mjs  csharp-weakened-cookie-flags.case.mjs  deps-cargo-benign-metadata.case.mjs  deps-cargo-phantom-crate.case.mjs  deps-go-phantom-module.case.mjs  deps-maven-new-dependency.case.mjs  deps-nuget-phantom-package.case.mjs  deps-pyproject-new-dependency.case.mjs  deps-python-requirements-new.case.mjs  disabled-tls-verification.case.mjs  dynamic-code-execution.case.mjs  go-child-process.case.mjs  go-cookies-weakened.case.mjs  go-cors-permissive.case.mjs  go-guard-removed.case.mjs  go-loose-regex.case.mjs  go-removed-if-guard.case.mjs  go-removed-sanitize.case.mjs  go-structural-drift.case.mjs  go-tls-disable.case.mjs  go-verify-to-decode.case.mjs  guard-removed-around-call.case.mjs  hardcoded-secret.case.mjs  java-broadened-cors.case.mjs  java-child-process.case.mjs  (+78 more)
eval/lib/: answers.mjs  cases.mjs  cli.mjs  evaluators.mjs  packets.mjs  panel-render.mjs  repo.mjs  score.mjs
scripts/: build-coverage-card.mjs  capture-demo-video.mjs  capture-demo.mjs  capture-scorecard.mjs  capture-trailer.mjs  fix-icon-alpha.mjs  fp-replay.mjs  seed-demo.mjs  verify-icon-alpha.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/benches/: analysis.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  deps_diff.rs  diff.rs  git.rs  heuristics.rs  lib.rs  main.rs  model.rs  parse.rs  report.rs  rules.rs  session.rs  store.rs  structural.rs  test_fixture.rs  watcher.rs
src-tauri/src/lang/: csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  python.rs  rust.rs  swift.rs
src-tauri/tests/: cli.rs  cli_bin.rs
src/components/: Center.tsx  DiffBody.tsx  EmptyState.tsx  NodeCard.tsx  RightPanel.tsx  Sidebar.tsx  TitleBar.tsx  Toolbar.tsx
(+125 files in other folders)
