[package]
name = "drift-inspector"
version = "0.2.0"
description = "Diff Drift — AST-level security inspector for the code drift AI coding agents leave behind"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "drift_inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26.9"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
git2 = "0.21.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
regex = "1.12.4"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_Console"] }
