[package]
name = "diff-drift"
version = "0.4.0"
description = "Diff Drift — AST-level security inspector for the code drift AI coding agents leave behind"
edition = "2021"
# Two bins below; keep `cargo run -- check` meaning the app/GUI binary.
default-run = "diff-drift"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "diff_drift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
bench = false

[[bin]]
name = "diff-drift"
path = "src/main.rs"
bench = false

# Console-subsystem twin of the `check` CLI: shells wait for it and see the
# real exit code, unlike the windows-subsystem app binary above.
[[bin]]
name = "diff-drift-cli"
path = "src/bin/diff-drift-cli.rs"
bench = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "analysis"
harness = false

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26.9"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
# Core-four grammars for structural drift. Versions pinned so each grammar's
# language ABI loads under tree-sitter 0.26.x (all route through
# tree-sitter-language; `cargo tree` shows a single tree-sitter core, no dup).
tree-sitter-rust = "0.24.2"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-java = "0.23.5"
# Stretch grammars (C#, Kotlin, Swift) — same single-core constraint: each routes
# through tree-sitter-language so `cargo tree` shows one tree-sitter core.
tree-sitter-c-sharp = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7.3"
git2 = "0.21.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
regex = "1.12.4"
streaming-iterator = "0.1"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_Console"] }

[profile.release]
lto = "thin"
strip = "symbols"
